[gd_scene load_steps=11 format=2]

[ext_resource path="res://sprites/bg/BG1.png" type="Texture" id=1]
[ext_resource path="res://fonts/dynamicFonts/word.tres" type="DynamicFont" id=2]
[ext_resource path="res://scenes/BackButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/MusicPlayer.tscn" type="PackedScene" id=4]
[ext_resource path="res://fonts/ProductSans-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://sprites/achievements/A0.png" type="Texture" id=6]
[ext_resource path="res://displayScenes/AchievementDisplay.gd" type="Script" id=7]
[ext_resource path="res://sprites/buttons/Reset_down.png" type="Texture" id=8]
[ext_resource path="res://sprites/buttons/Reset.png" type="Texture" id=9]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 5 )

[node name="AchievementDisplay" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -454.0
margin_top = -301.02
margin_right = 454.0
margin_bottom = 183.98
alignment = 1
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="VBoxContainer"]
margin_right = 908.0
margin_bottom = 156.0
custom_fonts/font = ExtResource( 2 )
text = "Achievement"
align = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 160.0
margin_right = 908.0
margin_bottom = 485.0
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_right = 300.0
margin_bottom = 325.0

[node name="Achievement1" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 300.0
margin_bottom = 256.0
rect_min_size = Vector2( 300, 256 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="AchivementLabel1" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 300.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 1 )
text = "Membaca seluruh
daftar kosakata"
align = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 304.0
margin_right = 604.0
margin_bottom = 325.0

[node name="Achievement2" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_right = 300.0
margin_bottom = 256.0
rect_min_size = Vector2( 300, 256 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="AchivementLabel2" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 260.0
margin_right = 300.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 1 )
text = "Membaca seluruh
daftar kosakata"
align = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 608.0
margin_right = 908.0
margin_bottom = 325.0

[node name="Achievement3" type="TextureRect" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_right = 300.0
margin_bottom = 256.0
rect_min_size = Vector2( 300, 256 )
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="AchivementLabel3" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer3"]
margin_top = 260.0
margin_right = 300.0
margin_bottom = 325.0
custom_fonts/font = SubResource( 1 )
text = "Membaca seluruh
daftar kosakata"
align = 1

[node name="Back" parent="." instance=ExtResource( 3 )]
targetSceneName = "MainMenu"

[node name="MusicPlayer" parent="." instance=ExtResource( 4 )]

[node name="Reset" type="TextureButton" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -313.0
margin_top = -88.5408
margin_right = -57.0
margin_bottom = -24.5408
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 9 )
texture_hover = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="button_down" from="Reset" to="." method="_on_Reset_button_down"]
